force-app/main/default/objects/JAMS_Teams__c/JAMS_Teams__c.object-meta.xml
<CustomObject>
    <label>JAMS Teams</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>JAMS Teams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JAMS Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>