force-app/main/default/objects/JAMS_Teams__c/fields/Team_Number__c.field-meta.xml
<CustomField>
    <fullName>Team_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>