force-app/main/default/objects/JAMS_Teams__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>JAMS Teams</relationshipLabel>
    <relationshipName>JAMS_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>