force-app/main/default/objects/JAMS_Teams__c/fields/Territory_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name_txt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>